# Bevy_2D_ECS_SwarmSim_Demo

./: .gitignore  Cargo.toml  README.md
assets/: simulation.ron
src/: components.rs  main.rs  resources.rs  systems.rs  utilityfunctions.rs
